1/30/12 created screenshot based on JC's requirements (potassium dichromate, no precipitate)
1/30/12 last pass at doc, in preparation for code review
# 0.00.16 (60693) Jan 26, 2012
1/26/12 change requests; rename project to molarity
1/26/12 wrote implementation-notes.txt
1/26/12 rename "dilutions" project to "molarity"
1/26/12 write model description (model.txt)
1/26/12 rename various Dilutions* classes to Molarity*
1/26/12 delete code that is specific to "Dilutions" tab [60666]
1/26/12 disable the concentration feature on the beaker label
1/25/12 revert min color of KMnO4 to RGB=[255,0,255]
1/25/12 factor out constants for range and value formats
# 0.00.15 (60626) Jan 25, 2012
1/25/12 add concentration value to beaker label when "Show values" is selected
1/24/12 split slider and concentration display labels into title and subtitle, so that subtitle can be in a lesser font
1/24/12 factor out constants for various font sizes and styles (labels, units, ranges, values)
1/24/12 fix "Saturated" indicator, observe the amount of precipitate, not the concentration
1/24/12 setOpaque(false) for "Show values" check box
1/24/12 change min color for KMnO4 to RGB=[225,28,174]
1/24/12 fix max range label on sliders
# 0.00.14 (60447) Jan 18, 2012
1/18/12 first dev version of "Molarity" sim, for team discussion
1/17/12 use PrecisionDecimal to limit values to 2 decimal places in sliders
1/17/12 use HALF_UP (nearest neighbor) rounding in DefaultDecimalFormat
1/17/12 cleanup the number formatter that displays zero as "0" (no decimal places)
1/17/12 show min/max/current value on sliders, switch between quantitative and qualitative
1/17/12 generalize the label that can be switched between quantitative and qualitative representations
1/16/12 add "non-interactive" message to beaker
1/16/12 add "non-interactive" messages for parts of the concentration display that the user is likely to try to interact with
1/16/12 add values to concentration display
1/16/12 add tick mark labels to beaker